--- a/templates/publicacao.html
+++ b/templates/publicacao.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Publicação de conteúdo no INPROLIB com validações e segurança." />
   <title>INPROLIB - Publicação de Conteúdo</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/publicacao.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/topbar.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/notifications.css') }}">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
