--- a/templates/relatorio.html
+++ b/templates/relatorio.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>INPROLIB - Emissão de Relatórios</title>
   <link rel="stylesheet" href="relatorio.css">
+  <link rel="stylesheet" href="topbar.css">
   <link rel="stylesheet" href="notifications.css?v=1">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
