--- a/templates/vinculacao_curso.html
+++ b/templates/vinculacao_curso.html
@@ -7,6 +7,7 @@
   <title>INPROLIB - Vinculação de Curso</title>
   <link rel="stylesheet" href="avaliacao.css">
   <link rel="stylesheet" href="notifications.css">
+  <link rel="stylesheet" href="topbar.css">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
