--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>INPROLIB - Home</title>
   <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="topbar.css">
   <link rel="stylesheet" href="notifications.css">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
